2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘revnum’ from global state of rcs(1).

	* rcs.c (revnum): Delete var.
	(removerevs, doassoc, setlock, dolocks)
	(domessages, rcs_setstate): Add auto var ‘numrev’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move rcs.c ‘main’ auto var ‘deltas’ into the admin closure.

	U ≡ "Take ‘dc’, not ‘tp_deltas’";
	V ≡ "U; use ‘&dc->deltas’".
	* rcs.c (struct admin_closure): Add member ‘deltas’.
	(setlock): V.
	(dolocks): Likewise; update calls to ‘setlock’.
	(domessages, rcs_setstate): V.
	(main): Delete auto var ‘deltas’; update calls to ‘dolocks’,
	‘domessages’, ‘rcs_setstate’; use ‘dc.deltas’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move a rcs.c ‘main’ auto var into a structure.

	* rcs.c (struct admin_closure): New.
	(main): Replace auto var ‘exitstatus’ with ‘dc’;
	update calls to ‘cleanup’; use ‘dc.rv’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {force,lock,mtime}flag from global state of co(1).

	* co.c (struct work): Add member ‘force’.
	(forceflag, lockflag, mtimeflag): Delete vars.
	(rmworkfile): Use ‘work->force’.
	(main): Update initialization form for auto var ‘work’;
	add auto vars ‘lockflag’, ‘mtimeflag’; use ‘work.force’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘targetdelta’ from global state of co(1).

	* co.c (struct jstuff): Add member ‘d’.
	(targetdelta): Delete var.
	(preparejoin, buildjoin): Use ‘js->d’.
	(main): Use ‘jstuff.d’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘neworkptr’ from global state of co(1).

	* co.c (neworkptr): Delete var.
	(cleanup): Take 2nd var ‘neworkptr’.
	(main): Add auto var ‘neworkptr’; update calls to ‘cleanup’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {expand,suffix,version,zone}arg from global state of co(1).

	* co.c (expandarg, suffixarg, versionarg, zonearg): Delete vars.
	(struct jstuff): Add members ‘expand’, ‘suffix’, ‘version’, ‘zone’.